--- a/article.twig
+++ b/article.twig
@@ -621,7 +621,7 @@
                                                 <div class="c-navigation-4 c-navigation-4--inverse c-navigation-4-xs d-sm-flex p-0 mb-3 mb-xl-5">
                                                 {%if config.paywall.displaySubscribeButton == true%}
                                                     {% if _User.isGuest() %}
-                                                        <a href="{{networkData.defaultBlogUrl}}/subscriptions" class="c-navigation__item c-navigation__item--borderred subscribe">Subscribe</a>
+                                                        <a href="{{networkData.defaultBlogUrl}}/subscriptions" class="c-navigation__item c-navigation__item--borderred subscribe">Subscribe to our newsletters</a>
                                                     {% endif %}
                                                 {% endif %}
                                                 </div>
