--- a/static/sass/cards/_card-11.scss
+++ b/static/sass/cards/_card-11.scss
@@ -60,6 +60,29 @@
                 }
             }
         }
+        &.hide_digital_highlight_content {
+            .c-cards-view__container {
+                display: none; 
+            }
+        }
+    }
+}
+
+.digital_edition_cover {
+    .digital_edition_cover_bordered {
+        border-top: 1px solid $grey4;
+        margin-top: 15px;
+        padding-top: 15px;
+        position: relative;
+
+        &:before {
+            content: '';
+            background-color: $grey4;
+            width: 1px;
+            left: 0;
+            position: absolute;
+            height: calc(100% - 20px);
+        }
     }
 }
 
