--- a/section-digital-cover.twig
+++ b/section-digital-cover.twig
@@ -114,7 +114,7 @@
                                         width: 230, height: 319
                                     }
                                 },
-                                containerClass: "card-2-mobile card-2-tablet card-2-desktop card-2-desktop--portrait"
+                                containerClass: "card-2-mobile card-2-tablet card-2-desktop card-2--portrait"
                             }) | raw}}
                             {% set articleCount = (dev) ? articleCount : articleCount + 1 %}
                         </div>
