--- a/section-digital.twig
+++ b/section-digital.twig
@@ -30,8 +30,7 @@
     {% set ctaURL = cta.button['url'] %}
 {% endif %}
 
-
-<main id="main" class="site-main u-margin-top-60" role="main" data-article-limit="{{limit}}" data-article-count="{{articles | length}}">
+<main id="main" class="site-main u-margin-top-60 digital_edition_cover" role="main" data-article-limit="{{limit}}" data-article-count="{{articles | length}}">
     <div class="container">
         <div class="row">
             <div class="col-12">
@@ -43,59 +42,44 @@
         
         <div class="row">
             <div class="col-12 col-lg-6">
-                {{this.render('partials/_single-article.twig', {
-                    article: articles[articleCount], 
-                    position: (articleCount+1),
-                    imageSize: {width: 650, height: 900},
-                    imageSizes: {
-                        "mobile": {
-                            width: 230, height: 319
-                        },
-                        "mobileLrg": {
-                            width: 230, height: 319
-                        },
-                        "tablet": {
-                            width: 230, height: 319
-                        }
-                    },
-                    containerClass: "card-11-mobile card-11-tablet card-11-desktop card-11-highlighter"
-                }) | raw}}
-                {% set articleCount = (dev) ? articleCount : articleCount + 1 %}
-            </div>
-            {% for i in 1..6 if articles[articleCount] %}
-                <div class="col-12 col-md-6 col-lg-3">
-                    {{this.render('partials/_single-article.twig', {
-                        article: articles[articleCount], 
-                        position: (articleCount+1),
-                        imageSize: {width: 650, height: 900},
-                        imageSizes: {
-                            "mobile": {
-                                width: 230, height: 319
-                            },
-                            "mobileLrg": {
-                                width: 230, height: 319
-                            },
-                            "tablet": {
-                                width: 230, height: 319
-                            }
-                        },
-                        containerClass: "card-11-mobile card-11-tablet card-11-desktop"
-                    }) | raw}}
-                    {% set articleCount = (dev) ? articleCount : articleCount + 1 %}
+                <div class="digital_edition_cover_background" style="margin-top:15px;height: calc(100% - 20px);overflow-hidden;background-color:#000000">
+                    {% if blogData.media.cover['path'] is defined and blogData.media.cover['path'] is not empty %}
+                        <img src={{blogData.media.cover['path']}} alt="image" class="img-fluid" />
+                    {% endif %}
                 </div>
-            {% endfor %}
+            </div>
+            <div class="col-12 col-lg-6">
+                <div class="row">
+                {% for i in 0..3 if articles[articleCount] %}
+                    <div class="col-12 col-md-6 digital_edition_cover_bordered">
+                        {{this.render('partials/_single-article.twig', {
+                            article: articles[articleCount], 
+                            position: (articleCount+1),
+                            imageSize: {width: 650, height: 900},
+                            imageSizes: {
+                                "mobile": {
+                                    width: 230, height: 319
+                                },
+                                "mobileLrg": {
+                                    width: 230, height: 319
+                                },
+                                "tablet": {
+                                    width: 230, height: 319
+                                }
+                            },
+                            containerClass: "card-2-mobile card-2-tablet card-2-desktop"
+                        }) | raw}}
+                        {% set articleCount = (dev) ? articleCount : articleCount + 1 %}
+                    </div>
+                {% endfor %}
+                </div>
+            </div>
         </div>
-
         <div class="row">
             <div class="col-12">
-                {% if config['inventory']['adSpace']['banner'][1] is defined %}
-                    <div class="my-5 overflow-hidden">
-                        <div class="j-adslot" id="{{config['inventory']['adSpace']['banner'][1]}}" data-adshape="banner"></div>
-                    </div>
-                {% endif %}
                 <div class="row">
-                    {% for i in 7..14 if articles[articleCount] %}
-                        <div class="col-12 col-md-6 col-lg-3">
+                    {% for i in 5..14 if articles[articleCount] %}
+                        <div class="col-12 col-md-6 col-lg-3 digital_edition_cover_bordered">
                             {{this.render('partials/_single-article.twig', {
                                 article: articles[articleCount], 
                                 position: (articleCount+1),
@@ -111,7 +95,7 @@
                                         width: 230, height: 319
                                     }
                                 },
-                                containerClass: "card-11-mobile card-11-tablet card-11-desktop"
+                                containerClass: "card-2-mobile card-2-tablet card-2-desktop"
                             }) | raw}}
                             {% set articleCount = (dev) ? articleCount : articleCount + 1 %}
                         </div>
@@ -163,7 +147,7 @@
             label           : "Load more",
             name            : 'section-load',
             blogid          : "{{ blogData['guid'] }}",
-            card_class      : 'card-11-mobile card-11-tablet card-11-desktop col-12 col-md-6 col-lg-3 mb-4',
+            card_class      : 'card-2-mobile card-2-tablet card-2-desktop col-12 col-md-6 col-lg-3 mb-4 digital_edition_cover_bordered',
             non_pinned      : "{{ articlesArr.existingNonPinnedCount }}"
         });
     });
