--- a/static/sass/cards/_card-11.scss
+++ b/static/sass/cards/_card-11.scss
@@ -86,6 +86,10 @@
             position: absolute;
             height: calc(100% - 20px);
         }
+
+        .c-cards-view {
+            border-bottom: none !important;
+        }
     }
 }
 
